src/test/fail/classes/invalid_class_name.lly
#[
SyntaxError: 'A' is not a valid class name (too short).
Where: File "invalid_class_name.lly" at line 6
]#

class A() {}
